# photerr

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml  pypi.yml
notebooks/: compare_euclid_models.ipynb  compare_lsst_models.ipynb  compare_roman_models.ipynb
photerr/: __init__.py  euclid.py  lsst.py  lsstV1.py  lsstV2.py  model.py  params.py  roman.py
tests/: test_dummy.py  test_models.py  test_params.py
