[tool.poetry]
name = "photerr"
version = "1.0.0"
description = "Photometric error model for astronomical imaging surveys"
authors = ["John Franklin Crenshaw <jfcrenshaw@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/jfcrenshaw/photerr"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.23.2"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-cov = "^3.0.0"
black = "^22.6.0"
mypy = "^0.971"
isort = "^5.10.1"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
flake8-broken-line = "^0.5.0"
flake8-bugbear = "^22.8.23"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.0"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.3.0"
flake8-isort = "^4.2.0"
flake8-print = "^5.0.0"
flake8-pytest-style = "^1.6.0"
flake8-simplify = "^0.19.3"
flake8-tidy-imports = "^4.8.0"
jupyterlab = "^3.4.5"
matplotlib = "^3.5.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length=88

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = false
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pyright]
reportGeneralTypeIssues = false
