[project]
name = "photerr"
version = "1.4.1"
description = "Photometric error model for astronomical imaging surveys"
authors = [{name = "John Franklin Crenshaw", email = "jfcrenshaw@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23.2",
    "pandas>=1.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1",
    "pytest-cov>=3.0.0",
    "ruff>=0.6.0",
    "jupyterlab>=3.4.5",
    "matplotlib>=3.5.3",
    "pre-commit>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/jfcrenshaw/photerr"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["A", "B", "C4", "D", "E", "ERA", "F", "I", "PT", "RUF", "SIM", "T20", "TID", "UP", "W"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.pyright]
reportGeneralTypeIssues = false
